# zdc

./: .gitignore  README.md  pyproject.toml
zdc/architectures/: conv.py  mlp_mixer.py  vit.py
zdc/layers/: __init__.py  conv.py  convnext.py  dense.py  mlp.py  patch.py  quantization.py  sampling.py  transformer.py  upsample.py  utils.py
zdc/models/: __init__.py
zdc/models/autoencoder/: channels.py  cond_embedding.py  convnext.py  decoder.py  embedding.py  latent_encoder.py  mlp_mixer.py  noise_generator.py  noise_generator_mse.py  noise_generator_sinkhorn.py  one_hot.py  optimize_channels.py  perceptual_loss.py  sam_optimizer.py  sinkhorn.py  supervised.py  supervised_channels.py  supervised_sam.py  variational.py  vit.py  vit_big.py  vit_latent_encoder.py  vit_noise_generator.py  vit_supervised.py  vq_vae.py  vq_vae_cond.py  vq_vae_gen.py  vq_vae_prior.py
zdc/models/diffusion/: diffusion.py
zdc/models/gan/: aux_regressor.py  convnext.py  gan.py  gan_aux.py  gan_gp.py  gan_l1.py  gan_l2.py  postprocessing.py  sdi_gan.py  vq_gan.py  wgan.py
zdc/models/generator/: conv.py  generator.py  igpt.py
zdc/models/quantization/: vq_gan.py  vq_vae.py  vq_vae_cond.py  vq_vae_gen.py  vq_vae_prior.py
zdc/scripts/: channels.py  generate_samples.py  generation_time.py  optimizer_tuning.py
zdc/scripts/plots/: __init__.py  dataset_correlation.py  dataset_visualization.py  diffusion_eta.py  diffusion_steps.csv  diffusion_steps.py  histograms.py  (+8 more)
zdc/sctiprs/: optimizer_tuning.py
zdc/utils/: data.py  losses.py  metrics.py  nn.py  torch.py  train.py  wasserstein.py
(+26 files in other folders)
