[project]
name = "zdc"
version = "0.1.0"

keywords = []

authors = [
  {name = "Maksymilian Wojnar", email = "mwojnar@agh.edu.pl"}
]

requires-python = ">=3.9"
dependencies = [
  "cloudpickle~=3.0.0",
  "clu~=0.0.11",
  "flax~=0.8.2",
  "flaxmodels@git+https://github.com/matthias-wright/flaxmodels",
  "jax~=0.4.25",
  "jaxlib~=0.4.25",
  "lz4~=4.3.3",
  "optax~=0.1.9",
  "optuna~=3.5.0",
  "seaborn~=0.13.2",
  "scikit-learn~=1.4.0",
  "tqdm~=4.66.2",
  "wandb~=0.16.3"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
